--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mini-css-extract-plugin": "^0.8.0",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
+    "prettier": "^1.19.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
