--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "style-loader": "^0.23.1",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "date-fns": "^2.2.1",
-    "materialize-css": "^1.0.0-rc.2"
+    "materialize-css": "^1.0.0"
   }
 }
