--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,3 @@
-# Ignore bundler config.
-/.bundle
-
-# Ignore the default SQLite database.
-/db/*.sqlite3
-/db/*.sqlite3-journal
-
 # Ignore all logfiles and tempfiles.
-/log/*
-!/log/.keep
-*.log
-/tmp
-
-.idea/
-
-build/
-node_modules/
-dist/
-my_notes.txt
+node_modules
+package-lock.json
