--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,7 @@
 {
   "presets": [
-    [
-      "@babel/preset-evn",
-      {
-        "targets": { "node": "12" }
-      }
-    ]
+    [ "@babel/preset-env", {
+      "targets": { "node": "10" }
+    } ]
   ]
 }
